--- a/components/blog-home.css
+++ b/components/blog-home.css
@@ -188,8 +188,8 @@
 .sakura-toolbar-actions > button,
 .sakura-toolbar-actions > a {
   display: grid;
-  width: 44px;
-  height: 44px;
+  width: 42px;
+  height: 42px;
   place-items: center;
   border: 1px solid var(--sakura-line);
   border-radius: 50%;
